<resources>
    <string name="app_name">A06Exercicio01</string>
    <string name="nome">Nome:</string>
    <string name="matricula">Matricula:</string>
    <string name="idade">Idade:</string>
    <string name="anosInstituicao">Anos na instituição</string>
    <string name="salario">Salario:</string>
    <string name="horaAula">Horas de aula:</string>
    <string name="ValorHoraAula">Valor da hora Aula:</string>
    <string name="titular">Titular</string>
    <string name="Horista">Horista</string>
    <string name="btnCalcular">Calcular</string>
    <string name="tvSalario">Salario R$</string>
</resources>